<resources>
    <string name="app_name">Cosa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_photo">Take Photo</string>
    <string name="thing">Thing name</string>
    <string name="place">Place description</string>
    <string name="add_item">Add</string>
    <string name="cancel">Cancel</string>
    <string name="place_required_error">Item\'s place can not be empty!</string>
    <string name="name_required_error">Item\'s name can not be empty!</string>
    <string name="no_things_added">No things</string>
    <string name="search">Search</string>
    <string name="save_changes">Save</string>
    <string name="edit">Edit</string>
    <string name="edit_or_view">View or edit</string>
    <string name="delete">Delete</string>
    <string name="take_a_photo">Take a photo of item !</string>
    <string name="no_notes_added">No notes</string>
    <string name="your_notes_here">Text</string>
    <string name="confirm">Confirm</string>
    <string name="things">Things</string>
    <string name="notes">Notes</string>
    <string name="edit_your_note">Edit your note</string>
    <string name="create_new_note">Create new note</string>
    <string name="are_you_sure">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search_for_item">Search for an item</string>
    <string name="search_for_note">Search for a note</string>
    <string name="language">Language</string>
    <string name="am">Հայերեն</string>
    <string name="ru">Русский</string>
    <string name="en">English</string>
    <string name="trash_is_empty">Recycle bin is empty</string>
    <string name="search_for_deleted_item">Search for a deleted item</string>
    <string name="search_for_deleted_note">Search for a deleted note</string>
    <string name="backup_things">Things</string>
    <string name="backup_notes">Notes</string>
    <string name="delete_completely">Delete completely</string>
    <string name="recover_item">Recover</string>
    <string name="backup_settings">Backup and restore</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="thing_added_add_key" translatable="false">ca-app-pub-2901193013289479/6056145149</string>
    <string name="thing_add_ad_key" translatable="false">ca-app-pub-2901193013289479/7764889583</string>
    <string name="note_add_key" translatable="false">ca-app-pub-2901193013289479/7065766020</string>
    <string name="title">Title</string>
    <string name="overall">Overall:</string>

</resources>
