<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="swipeHandler"
            type="com.example.cosa.arch.helpers.SwipeHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBckg"
        tools:context=".arch.notes.NotesFragment"
        android:focusable="true"
        android:clickable="true">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNoteList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIntroductionNotes"
            app:layout_constraintVertical_bias="0.0"
            bind:bgColorSwipeLeft="@{@color/app_red}"
            bind:bgColorSwipeRight="@{@color/app_red}"
            bind:drawableSwipeLeft="@{@drawable/ic_close_white_24dp}"
            bind:drawableSwipeRight="@{@drawable/ic_close_white_24dp}"
            bind:onItemSwipeLeft="@{(position) -> swipeHandler.onItemSwipedLeft(position)}"
            bind:onItemSwipeRight="@{(position) -> swipeHandler.onItemSwipedRight(position)}"
            bind:swipeEnabled="@{true}" />

        <ImageView
            android:id="@+id/imgNoNotes"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="180dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rvNoteList"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/rvNoteList"
            app:layout_constraintTop_toTopOf="@+id/rvNoteList"
            app:srcCompat="@drawable/ic_no_notes" />

        <SearchView
            android:id="@+id/searchViewNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:background="@color/darkerBckg"
            android:clickable="true"
            android:focusable="true"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search_for_note"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddNote"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/lightGray"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="center"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rvNoteList"
            bind:targetApi="lollipop" />

        <TextView
            android:id="@+id/txtNoNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/no_notes_added"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/imgNoNotes"
            app:layout_constraintStart_toStartOf="@+id/imgNoNotes"
            app:layout_constraintTop_toBottomOf="@+id/imgNoNotes" />

        <TextView
            android:id="@+id/txtIntroductionNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/notes"
            android:textColor="@color/lightGray"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchViewNotes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>