<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="swipeHandler"
            type="com.cosa.arch.common.SwipeHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        android:clickable="true"
        android:focusable="true"
        tools:context=".arch.things.ThingsFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/clThingsFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIntroductionThingAdded">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvThingList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                app:layout_behavior=".helper.OverScrollBehavior"
                bind:bgColorSwipeLeft="@{@color/app_red}"
                bind:bgColorSwipeRight="@{@color/app_red}"
                bind:onItemSwipeLeft="@{(position) -> swipeHandler.onItemSwipedLeft(position)}"
                bind:onItemSwipeRight="@{(position) -> swipeHandler.onItemSwipedRight(position)}"
                bind:swipeEnabled="@{true}" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddNote"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/textColorLight"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="center"
            android:src="?attr/addIcon"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/clThingsFragment"
            bind:targetApi="lollipop" />

        <ImageView
            android:id="@+id/imgNoThings"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="128dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/clThingsFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/clThingsFragment"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/noThingsIcon" />

        <TextView
            android:id="@+id/noItemYetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/no_things_added"
            android:textColor="?attr/textColor"
            android:textSize="22sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/imgNoThings"
            app:layout_constraintStart_toStartOf="@+id/imgNoThings"
            app:layout_constraintTop_toBottomOf="@+id/imgNoThings"
            tools:textStyle="bold" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_button_solid"
            android:clickable="true"
            android:focusable="true"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search_for_item"
            android:textColor="?attr/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtIntroductionThingAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/things"
            android:textColor="?attr/textColorLight"
            android:textSize="28sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>